fix issue with no margins on phone input (https://github.com/woocommerce/woocommerce-blocks/pull/2989)
* fix issue with overlapping margins

* move styles out of select

* remove extra spacing

* remove extra spacing from cart

* move styles to state input and remove extra position.

--- a/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
@@ -1,7 +1,6 @@
 .wc-block-components-select {
 	height: 3em;
 	position: relative;
-	margin-bottom: em($gap-large);
 
 	label {
 		@include reset-typography();
