--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -195,23 +195,16 @@
 
 			.wc-block-components-text-input,
 			.wc-block-components-country-input,
-			.wc-block-components-select {
+			.wc-block-components-state-input {
 				float: left;
 				margin-left: #{$gap-small / 2};
 				margin-right: #{$gap-small / 2};
 				position: relative;
 				width: calc(50% - #{$gap-small});
 
-				.wc-block-components-select {
-					float: none;
-					width: 100%;
-					margin-left: 0;
-					margin-right: 0;
-				}
-
-				&:nth-last-of-type(2),
-				&:last-of-type {
-					margin-bottom: 0;
+				&:nth-of-type(2),
+				&:first-of-type {
+					margin-top: 0;
 				}
 			}
 
